--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="container">
         <div class="characters">
             <div class="character">
-                <img src="path_to_male_character_image" alt="Male Character in Red Tee">
+                <img src="dak_stardew.png" alt="Male Character in Red Tee">
                 <p>Male Character</p>
             </div>
             <div class="heart">❤️</div>
