--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         h1 {
             color: #e63946;
         }
-        .heart {
-            font-size: 100px;
-            color: #e63946;
+        .character img, .heart {
+            width: 100px; /* Adjust the size as needed */
+            height: 100px; /* Adjust the size as needed */
         }
         .message {
             font-size: 24px;
@@ -49,12 +49,8 @@
             align-items: center;
             margin-top: 20px;
         }
-        .character {
-            margin: 0 20px;
-        }
-        .character img {
-            width: 150px;
-            height: 150px;
+        .heart {
+            margin: 0 10px; /* Adjust the space between images and heart */
         }
         .hearts {
             position: absolute;
@@ -96,7 +92,7 @@
             </div>
             <div class="heart">❤️</div>
             <div class="character">
-                <img src="path_to_female_character_image" alt="Female Character in Green Tee">
+                <img src="images/female_character_image.png" alt="Female Character in Green Tee">
                 <p>Female Character</p>
             </div>
         </div>
