--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
             </div>
         </div>
         <h1>Will You Be My Valentine?</h1>
-        <p class="message">My sweetlove,</p>
-        <p class="message">You make my heart flutter every time I see you. </p>
-        <p class="message">Your smile makes my deepest wounds heal, like they never existed . </p>
-        <p class="message">You are so awesome. I know I asked it before, but I want to hear it again from you. </p>
-        <p class="message">Will you be my Valentine, my love? </p>
+        <p class="message">My sweetlove,🥰💗</p>
+        <p class="message">You make my heart flutter every time I see you.😳💓 </p>
+        <p class="message">Your smile makes my deepest wounds heal, like they never existed. 🥺💖 </p>
+        <p class="message">You are so awesome. I know I asked it before, but I want to hear it again from you.😘❤ </p>
+        <p class="message">Will you be my Valentine, my love?🤭💞🌷 </p>
         <form action="YOUR_FORMSPREE_ENDPOINT" method="POST" id="valentineForm">
             <button class="button" type="submit" name="response" value="Yes, of course">Yes, of course</button>
             <button class="button" type="submit" name="response" value="Is that even a question?">Is that even a question?</button>
