--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
         h1 {
             color: #e63946;
         }
-        .character img, .heart {
-            width: 100px; /* Adjust the size as needed */
-            height: 100px; /* Adjust the size as needed */
+        .character img {
+            width: 100px;
+            height: 100px;
+        }
+        .heart {
+            font-size: 150px; /* Adjust size as needed */
+            color: #e63946;
+            margin: 0 10px;
         }
         .message {
             font-size: 24px;
@@ -48,9 +53,6 @@
             justify-content: center;
             align-items: center;
             margin-top: 20px;
-        }
-        .heart {
-            margin: 0 10px; /* Adjust the space between images and heart */
         }
         .hearts {
             position: absolute;
@@ -130,3 +132,5 @@
     </script>
 </body>
 </html>
+
+
