--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             overflow: hidden;
             position: relative;
             height: 100vh;
+             background-image: url('images/background.jpg'); /* Add this line */
+            background-size: cover; /* Ensure the image covers the entire background */
+            background-position: center; /* Center the image */
         }
         .container {
             position: relative;
