--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         .container {
             position: relative;
             z-index: 1;
+            background-color: rgba(255, 255, 255, 0.8); /* Adds a translucent white background */
+            padding: 20px;
+            border-radius: 10px; /* Optional rounded corners */
         }
         h1 {
             color: #e63946;
