--- a/index.html
+++ b/index.html
@@ -4,91 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Be My Valentine</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            background-color: #f8e1e1;
-            color: #333;
-            overflow: hidden;
-            position: relative;
-            height: 100vh;
-             background-image: url('images/background.jpg'); /* Add this line */
-            background-size: cover; /* Ensure the image covers the entire background */
-            background-position: center; /* Center the image */
+   <style>
+    body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        background-color: #f8e1e1;
+        color: #333;
+        overflow: auto; /* Allow scrolling */
+        position: relative;
+        height: 100vh;
+        background-image: url('images/background.jpg');
+        background-size: cover;
+        background-position: center;
+    }
+    .container {
+        position: relative;
+        z-index: 1;
+        background-color: rgba(255, 255, 255, 0.8); /* Adds a translucent white background */
+        padding: 20px;
+        border-radius: 10px; /* Optional rounded corners */
+        min-height: 100vh; /* Ensure it covers the entire viewport */
+    }
+    h1 {
+        color: #e63946;
+    }
+    .character img {
+        width: 100px;
+        height: 100px;
+    }
+    .heart {
+        font-size: 110px; /* Adjust size as needed */
+        color: #e63946;
+        margin: 0 10px;
+    }
+    .message {
+        font-size: 24px;
+        margin-top: 20px;
+    }
+    .button {
+        margin-top: 30px;
+        padding: 10px 20px;
+        background-color: #e63946;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        z-index: 1;
+        position: relative;
+    }
+    .button:hover {
+        background-color: #d62828;
+    }
+    .characters {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 20px;
+    }
+    .hearts {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        pointer-events: none;
+        overflow: hidden;
+        z-index: 0;
+    }
+    .heart-shower {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background-color: red;
+        clip-path: polygon(50% 0%, 0% 50%, 50% 100%, 100% 50%);
+        animation: fall 2s linear infinite;
+    }
+    @keyframes fall {
+        from {
+            transform: translateY(-100%);
+            opacity: 1;
         }
-        .container {
-            position: relative;
-            z-index: 1;
-            background-color: rgba(255, 255, 255, 0.8); /* Adds a translucent white background */
-            padding: 20px;
-            border-radius: 10px; /* Optional rounded corners */
+        to {
+            transform: translateY(100%);
+            opacity: 0;
         }
-        h1 {
-            color: #e63946;
-        }
-        .character img {
-            width: 100px;
-            height: 100px;
-        }
-        .heart {
-            font-size: 110px; /* Adjust size as needed */
-            color: #e63946;
-            margin: 0 10px;
-        }
-        .message {
-            font-size: 24px;
-            margin-top: 20px;
-        }
-        .button {
-            margin-top: 30px;
-            padding: 10px 20px;
-            background-color: #e63946;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            z-index: 1;
-            position: relative;
-        }
-        .button:hover {
-            background-color: #d62828;
-        }
-        .characters {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin-top: 20px;
-        }
-        .hearts {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            pointer-events: none;
-            overflow: hidden;
-            z-index: 0;
-        }
-        .heart-shower {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            background-color: red;
-            clip-path: polygon(50% 0%, 0% 50%, 50% 100%, 100% 50%);
-            animation: fall 2s linear infinite;
-        }
-        @keyframes fall {
-            from {
-                transform: translateY(-100%);
-                opacity: 1;
-            }
-            to {
-                transform: translateY(100%);
-                opacity: 0;
-            }
-        }
-    </style>
+    }
+</style>
 </head>
 <body>
     <div class="hearts" id="hearts"></div>
