--- a/index.html
+++ b/index.html
@@ -4,92 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Be My Valentine</title>
-   <style>
-    body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        background-color: #f8e1e1;
-        color: #333;
-        overflow: auto; /* Allow scrolling */
-        position: relative;
-        height: 100vh;
-        background-image: url('images/background.jpg');
-        background-size: cover;
-        background-position: center;
-    }
-    .container {
-        position: relative;
-        z-index: 1;
-        background-color: rgba(255, 255, 255, 0.8); /* Adds a translucent white background */
-        padding: 20px;
-        border-radius: 10px; /* Optional rounded corners */
-        min-height: 100vh; /* Ensure it covers the entire viewport */
-    }
-    h1 {
-        color: #e63946;
-    }
-    .character img {
-        width: 100px;
-        height: 100px;
-    }
-    .heart {
-        font-size: 110px; /* Adjust size as needed */
-        color: #e63946;
-        margin: 0 10px;
-    }
-    .message {
-        font-size: 24px;
-        margin-top: 20px;
-    }
-    .button {
-        margin-top: 30px;
-        padding: 10px 20px;
-        background-color: #e63946;
-        color: white;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        z-index: 1;
-        position: relative;
-    }
-    .button:hover {
-        background-color: #d62828;
-    }
-    .characters {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-top: 20px;
-    }
-    .hearts {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        pointer-events: none;
-        overflow: hidden;
-        z-index: 0;
-    }
-    .heart-shower {
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        background-color: red;
-        clip-path: polygon(50% 0%, 0% 50%, 50% 100%, 100% 50%);
-        animation: fall 2s linear infinite;
-    }
-    @keyframes fall {
-        from {
-            transform: translateY(-100%);
-            opacity: 1;
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8e1e1;
+            color: #333;
+            overflow: auto; /* Allow scrolling */
+            position: relative;
+            height: 100vh;
+            background-image: url('images/background.jpg');
+            background-size: cover;
+            background-position: center;
         }
-        to {
-            transform: translateY(100%);
-            opacity: 0;
+        .container {
+            position: relative;
+            z-index: 1;
+            background-color: rgba(255, 255, 255, 0.8); /* Adds a translucent white background */
+            padding: 20px;
+            border-radius: 10px; /* Optional rounded corners */
+            min-height: 100vh; /* Ensure it covers the entire viewport */
         }
-    }
-</style>
+        h1 {
+            color: #e63946;
+        }
+        .character img {
+            width: 100px;
+            height: 100px;
+        }
+        .heart {
+            font-size: 110px; /* Adjust size as needed */
+            color: #e63946;
+            margin: 0 10px;
+        }
+        .message {
+            font-size: 24px;
+            margin-top: 20px;
+        }
+        .button {
+            margin-top: 30px;
+            padding: 10px 20px;
+            background-color: #e63946;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            z-index: 1;
+            position: relative;
+        }
+        .button:hover {
+            background-color: #d62828;
+        }
+        .characters {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
+        .hearts {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            overflow: hidden;
+            z-index: 0;
+        }
+        .heart-shower {
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            background-color: red;
+            clip-path: polygon(50% 0%, 0% 50%, 50% 100%, 100% 50%);
+            animation: fall 2s linear infinite;
+        }
+        @keyframes fall {
+            from {
+                transform: translateY(-100%);
+                opacity: 1;
+            }
+            to {
+                transform: translateY(100%);
+                opacity: 0;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="hearts" id="hearts"></div>
@@ -111,35 +111,30 @@
         <p class="message">Your smile makes my deepest wounds heal, like they never existed. 🥺💖 </p>
         <p class="message">You are so awesome. I know I asked it before, but I want to hear it again from you.😘❤ </p>
         <p class="message">Will you be my Valentine, my love?🤭💞🌷 </p>
-        <form action="YOUR_FORMSPREE_ENDPOINT" method="POST" id="valentineForm">
-            <button class="button" type="submit" name="response" value="Yes, of course">Yes, of course</button>
-            <button class="button" type="submit" name="response" value="Is that even a question?">Is that even a question?</button>
-        </form>
+        <button class="button" id="buttonYes">Yes, of course</button>
+        <button class="button" id="buttonQuestion">Is that even a question?</button>
     </div>
-<script>
-    document.getElementById('valentineForm').addEventListener('submit', function(event) {
-        // No need for event.preventDefault();, form should submit
+    <script>
+        function showHeartsAndRedirect() {
+            const heartsContainer = document.getElementById('hearts');
+            heartsContainer.innerHTML = ''; // Clear any existing hearts
 
-        const heartsContainer = document.getElementById('hearts');
-        heartsContainer.innerHTML = ''; // Clear any existing hearts
+            for (let i = 0; i < 100; i++) { // Increased number of hearts for full-page effect
+                const heart = document.createElement('div');
+                heart.className = 'heart-shower';
+                heart.style.left = Math.random() * 100 + '%';
+                heart.style.animationDelay = Math.random() + 's';
+                heartsContainer.appendChild(heart);
+            }
 
-        for (let i = 0; i < 100; i++) { // Increased number of hearts for full-page effect
-            const heart = document.createElement('div');
-            heart.className = 'heart-shower';
-            heart.style.left = Math.random() * 100 + '%';
-            heart.style.animationDelay = Math.random() + 's';
-            heartsContainer.appendChild(heart);
+            // Show the hearts for a short time, then redirect
+            setTimeout(function() {
+                window.location.href = 'surprise.html';
+            }, 2000); // Adjust time as needed
         }
-        
-        // Show the hearts for a short time, then submit the form
-        setTimeout(function() {
-            // Redirect to surprise.html
-            window.location.href = 'surprise.html';
-        }, 2000); // Adjust time as needed
-    });
-</script>
 
+        document.getElementById('buttonYes').addEventListener('click', showHeartsAndRedirect);
+        document.getElementById('buttonQuestion').addEventListener('click', showHeartsAndRedirect);
+    </script>
 </body>
 </html>
-
-
