--- a/surprise.html
+++ b/surprise.html
@@ -38,7 +38,7 @@
         <h1>Surprise, My Valentine!</h1>
         <p>You have successfully unlocked these items</p>
         <a href="https://www.amazon.com/hz/wishlist/ls/3UGRI1X8KC7AT?ref_=wl_share">
-            <img src="path-to-your-amazon-logo-image" alt="Amazon Wishlist Logo">
+            <img src="images/amazon.png" alt="Amazon Wishlist Logo">
             <p>Items</p>
         </a>
         <img src="path-to-your-photo" alt="Your Photo">
