--- a/surprise.html
+++ b/surprise.html
@@ -41,8 +41,8 @@
             <img src="images/amazon.png" alt="Amazon Wishlist Logo">
             <p>Items</p>
         </a>
-        <img src="path-to-your-photo" alt="Your Photo">
-        <p>Your Name</p>
+        <img src="images/photo.jpg" alt="Your Photo">
+        <p>Your hubby</p>
     </div>
 </body>
 </html>
