--- a/surprise.html
+++ b/surprise.html
@@ -21,8 +21,17 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
+        .images-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .image-wrapper {
+            max-width: 45%; /* Ensure images take equal space side-by-side */
+        }
         img {
-            max-width: 100%;
+            width: 100%; /* Ensure the image fills the container */
             height: auto;
             border-radius: 10px;
         }
@@ -37,12 +46,18 @@
     <div class="container">
         <h1>Surprise, My Valentine!</h1>
         <p>You have successfully unlocked these items</p>
-        <a href="https://www.amazon.com/hz/wishlist/ls/3UGRI1X8KC7AT?ref_=wl_share">
-            <img src="images/amazon.png" alt="Amazon Wishlist Logo">
-            <p>Items</p>
-        </a>
-        <img src="images/photo.jpg" alt="Your Photo">
-        <p>Your hubby</p>
+        <div class="images-container">
+            <div class="image-wrapper">
+                <a href="https://www.amazon.com/hz/wishlist/ls/3UGRI1X8KC7AT?ref_=wl_share">
+                    <img src="images/amazon.png" alt="Amazon Wishlist Logo">
+                </a>
+                <p>Items</p>
+            </div>
+            <div class="image-wrapper">
+                <img src="images/photo.jpg" alt="Your Photo">
+                <p>Your Name</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
