--- a/index.html
+++ b/index.html
@@ -97,12 +97,12 @@
         <div class="characters">
             <div class="character">
                 <img src="images/dak_stardew.png" alt="Male Character in Red Tee">
-                <p>Male Character</p>
+                <p>Dak</p>
             </div>
             <div class="heart">❤️</div>
             <div class="character">
                 <img src="images/female_character_image.png" alt="Female Character in Green Tee">
-                <p>Female Character</p>
+                <p>Sop</p>
             </div>
         </div>
         <h1>Will You Be My Valentine?</h1>
