--- a/surprise.html
+++ b/surprise.html
@@ -45,17 +45,17 @@
 <body>
     <div class="container">
         <h1>Surprise, My Valentine!</h1>
-        <p>You have successfully unlocked these items</p>
+        <p>You have successfully unlocked these perks!</p>
         <div class="images-container">
             <div class="image-wrapper">
                 <a href="https://www.amazon.com/hz/wishlist/ls/3UGRI1X8KC7AT?ref_=wl_share">
                     <img src="images/amazon.png" alt="Amazon Wishlist Logo">
                 </a>
-                <p>Items</p>
+                <p>Press amazon</p>
             </div>
             <div class="image-wrapper">
                 <img src="images/photo.jpg" alt="Your Photo">
-                <p>Your Name</p>
+                <p>Me</p>
             </div>
         </div>
     </div>
