--- a/surprise.html
+++ b/surprise.html
@@ -55,7 +55,7 @@
             </div>
             <div class="image-wrapper">
                 <img src="images/photo.jpg" alt="Your Photo">
-                <p>Me</p>
+                <p>Date with him</p>
             </div>
         </div>
     </div>
